Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-62170

The connection's max_sched_time is set to the wrong value

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Morpheus
    • 7.6.0, 7.0.0, 7.1.0, 7.2.0, 7.2.5, 7.6.2, 7.2.6, 7.6.1
    • memcached
    • None
    • Untriaged
    • 0
    • Unknown

    Description

      This appears to be due to a typo where we use the min_sched_time to initialise max_sched_time. Introduced in https://review.couchbase.org/c/kv_engine/+/79308/5/daemon/connection.cc#545.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vesko.karaganev Vesko Karaganev
            vesko.karaganev Vesko Karaganev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty