MB-62170: Correctly track a connections max_sched_time

The value was wrong due to a typo.

Change-Id: I2c72e4789a874b4c889d46833f2b67827b503e4b
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/210914
Tested-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>